k8s/staging-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dead-simpl-backend-staging
  namespace: staging
  labels:
    app: dead-simpl-backend-staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dead-simpl-backend-staging
  template:
    metadata:
      labels:
        app: dead-simpl-backend-staging
    spec:
      containers:
      - name: dead-simpl-backend-staging
        image: us-central1-docker.pkg.dev/halogen-eon-470613-h3/dead-simpl-backend/dead-simpl-backend:staging
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 5"]
        readinessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
