k8s/staging-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dead-simpl-staging-ingress
  namespace: staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api-staging.dead-simpl.com
    - portal-staging.dead-simpl.com
    secretName: dead-simpl-staging-tls
  rules:
  - host: api-staging.dead-simpl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dead-simpl-backend-staging-service
            port:
              number: 80
  - host: portal-staging.dead-simpl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dead-simpl-frontend-staging-service
            port:
              number: 80
